--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		<div class="cta">
 		
 			<div class="logo">
-				<img src="sephyr_logo_dark-text_450x450.jpg">
+				<img src="images/sephyr_logo_dark-text_450x450.jpg">
 			</div>
 			
 			
@@ -192,7 +192,7 @@
 		
 		<div class="feature-a-image">
 		
-			<img src="calendar.png" />
+			<img src="images/calendar.png" />
 		
 		</div>
 	
