--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
 	
 	<!-- *** EDIT ME *** -->
-    <title>Enter Your Page Title Here</title>
+    <title>Sephyr: Build a business</title>
     
     <!-- *** EDIT ME *** -->
     <meta content="Keyword, Keyword, Keyword" name="keywords">
